--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ title: "Digital Media Transfer Workflow"
 description: "Instructions for inventorying and transferring digital media, using the Digital Media Log"
 pages:
   - ["Rockefeller Archive Center Digital Media Transfer Workflow", "index"]
-  - [Inventorying Digital Media, "inventory"]
+  - ["Inventorying Digital Media", "inventory"]
   - ["Transfer Instructions by Digital Media Type", "transfer-instructions"]
   - ["Troubleshooting by Digital Media Type", "troubleshooting"]
