--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 public: false
 type: "docs"
 tags:
-  - "digital"
+  - "digital preservation"
   - "processing"
   - "digital media log"
 title: "Digital Media Transfer Workflow"
