add proper punctuation to  virus scan

--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,5 @@ pages:
   - ["Rockefeller Archive Center Digital Media Transfer Workflow", "index"]
   - ["Inventorying Digital Media", "inventory"]
   - ["Transfer Instructions by Digital Media Type", "transfer-instructions"]
-  - ["Virus Scan", "virus_scan]
+  - ["Virus Scan", "virus_scan"]
   - ["Troubleshooting by Digital Media Type", "troubleshooting"]
