added error reporting page
set up page and copied in template

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,4 @@ pages:
   - ["Transfer Instructions", "transfer-instructions"]
   - ["Scanning for Viruses", "virus_scan"]
   - ["Troubleshooting by Digital Media Type", "troubleshooting"]
+  - ["Error Reporting", "error_reporting"]
