change troubleshooting page title
changed title and restructured page to open up for other types of troubleshooting (virs script)

--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,5 @@ pages:
   - ["Inventorying Digital Media", "inventory"]
   - ["Transfer Instructions", "transfer-instructions"]
   - ["Scanning for Viruses", "virus_scan"]
-  - ["Troubleshooting by Digital Media Type", "troubleshooting"]
+  - ["Troubleshooting", "troubleshooting"]
   - ["Error Reporting", "error_reporting"]
