--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ tags:
 title: "Digital Media Transfer Workflow"
 description: "Instructions for inventorying and transferring digital media, using the Digital Media Log"
 pages:
-  - ["Rockefeller Archive Center Digital Media Transfer Workflow", "index"]
+  - ["Digital Media Transfer Workflow", "index"]
   - ["Inventorying Digital Media", "inventory"]
   - ["Transfer Instructions", "transfer-instructions"]
   - ["Scanning for Viruses", "virus_scan"]
